# etrek

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  DEPLOYMENT_CHECKLIST.md  Note.txt  PR_SUMMARY.md  PULL_REQUEST_SUMMARY.md  RELEASE_NOTES.md  USAGE_GUIDE.md  WorklistConfigure.xml  notes.txt
Application/: CMakeLists.txt  readme.txt  resources.qrc
Application/Authentication/: AuthenticationService.cpp  AuthenticationService.h
Application/Delegate/: MainWindowBuilder.cpp  MainWindowBuilder.h  MainWindowDelegate.cpp  MainWindowDelegate.h  SystemSettingPageBuilder.cpp  SystemSettingPageBuilder.h  SystemSettingPageDelegate.cpp  SystemSettingPageDelegate.h
Application/Service/: ApplicationService.cpp  ApplicationService.h  DemoLaunchStrategy.cpp  DemoLaunchStrategy.h  DeveloperLaunchStrategy.cpp  DeveloperLaunchStrategy.h  ILaunchStrategy.h  MainAppLaunchStrategy.cpp  MainAppLaunchStrategy.h  SettingManagerLaunchStrategy.cpp  SettingManagerLaunchStrategy.h  SplashScreenManager.cpp  SplashScreenManager.h  UserManagerLaunchStrategy.cpp  UserManagerLaunchStrategy.h
Core/: AUDIT_REPORT.md  CMakeLists.txt  readme.txt  resources.qrc
Core/Globalization/: TranslationProvider.cpp
Core/Log/: AppLogger.cpp  AppLogger.h  AppLoggerFactory.cpp  AppLoggerFactory.h  LoggerProvider.cpp  LoggerProvider.h
Core/Repository/: AuthenticationRepository.cpp  AuthenticationRepository.h  DatabaseSetupManager.cpp  DatabaseSetupManager.h
Core/Script/: FOREIGN_KEY_CONSTRAINTS.md  README.md  README_ADMISSION_ID.md  STATUS_TRACKING_README.md  add_admission_id_to_studies.sql  backfill_admission_id.sql  migration_add_admission_id.sql  migration_add_status_tracking.sql  setup_database.sql  validate_admission_id.sql
Core/Security/: CryptoManager.cpp  CryptoManager.h
Core/Setting/: SettingProvider.cpp  SettingProvider.h
Core/Specification/: LogLevel.h
Core/Utility/: DateTimeUtils.h
Core/etrek-view-body-position/: body_parts.sql  positioners.sql  procedures.sql  technique_parameters.sql  validators.sql  views.sql
Device/: AUDIT_REPORT.md  CMakeLists.txt  readme.txt
Device/Delegate/: CollimatorConfigurationBuilder.cpp  CollimatorConfigurationBuilder.h  CollimatorConfigurationDelegate.cpp  CollimatorConfigurationDelegate.h  ConnectionSettingBuilder.cpp  ConnectionSettingBuilder.h  ConnectionSetupBuilder.cpp  ConnectionSetupBuilder.h  ConnectionSetupDelegate.cpp  ConnectionSetupDelegate.h  DapConfigurationBuilder.cpp  DapConfigurationBuilder.h  DapConfigurationDelegate.cpp  DapConfigurationDelegate.h  DetectorConfigurationBuilder.cpp  DetectorConfigurationBuilder.h  DetectorConfigurationDelegate.cpp  DetectorConfigurationDelegate.h  GeneratorConfigurationBuilder.cpp  GeneratorConfigurationBuilder.h  GeneratorConfigurationDelegate.cpp  GeneratorConfigurationDelegate.h  WorkflowConfigurationBuilder.cpp  WorkflowConfigurationBuilder.h  WorkflowConfigurationDelegate.cpp  WorkflowConfigurationDelegate.h
Device/Repository/: DeviceRepository.cpp  DeviceRepository.h
Dicom/: CMakeLists.txt  readme.txt
Dicom/Delegate/: ImageCommentConfigurationBuilder.cpp  ImageCommentConfigurationBuilder.h  ImageCommentConfigurationDelegate.cpp  ImageCommentConfigurationDelegate.h
Dicom/Repository/: DicomRepository.cpp  DicomRepository.h  DicomTagRepository.cpp  DicomTagRepository.h  ImageCommentRepository.cpp  ImageCommentRepository.h
Executable/: CMakeLists.txt  main.cpp  readme.txt
ImageViewer/: CMakeLists.txt  readme.txt
Pacs/: CMakeLists.txt  readme.txt
Pacs/Delegate/: PacsEntityConfigurationBuilder.cpp  PacsEntityConfigurationBuilder.h  PacsEntityConfigurationDelegate.cpp  PacsEntityConfigurationDelegate.h
Pacs/Repository/: PacsNodeRepository.cpp  PacsNodeRepository.h
ScanProtocol/: CMakeLists.txt  readme.txt
ScanProtocol/Delegate/: ProcedureConfigurationBuilder.cpp  ProcedureConfigurationBuilder.h  ProcedureConfigurationDelegate.cpp  ProcedureConfigurationDelegate.h  TechniqueConfigurationBuilder.cpp  TechniqueConfigurationBuilder.h  TechniqueConfigurationDelegate.cpp  TechniqueConfigurationDelegate.h  ViewConfigurationBuilder.cpp  ViewConfigurationBuilder.h  ViewConfigurationDelegate.cpp  ViewConfigurationDelegate.h
ScanProtocol/Repository/: ScanProtocolRepository.cpp  ScanProtocolRepository.h
Test/: CMakeLists.txt  README_ADMISSION_ID_TEST.md  tst_AdmissionIdSchema.cpp  tst_LoggerProvider.cpp  tst_MwlAttributesForeignKey.cpp  tst_RisManager.cpp  tst_RisManagerIntegrationTest.cpp  tst_WorklistQueryService.cpp  tst_WorklistRepository.cpp
Test/Core/: tst_AppLogger.cpp  tst_AppLoggerFactory.cpp  tst_AuthenticationRepository.cpp  tst_DatabaseInitializer.cpp  tst_SecurityServiceProvider.cpp  tst_SettingProvider.cpp  tst_StatusTrackingTest.cpp  tst_aesencryptionutils.cpp  tst_coreunittest.cpp
View/: CMakeLists.txt  readme.txt  resources.qrc
View/Delegate/: DateDelegate.cpp  DateDelegate.h  DetectorTableModel.cpp  DetectorTableModel.h  GeneratorTableModel.cpp  GeneratorTableModel.h  IntSpinDelegate.cpp  IntSpinDelegate.h  PositionComboDelegate.cpp  PositionComboDelegate.h  TubeComboDelegate.cpp  TubeComboDelegate.h  TubeOrderDelegate.cpp  TubeOrderDelegate.h  TubeTableModel.cpp  TubeTableModel.h
View/Dialog/: AddPatientDialog.cpp  AddPatientDialog.h  AddPatientDialog.ui  EtrekSplashScreen.cpp  EtrekSplashScreen.h  EtrekSplashScreen.ui  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  SetupDirectConnectionDialog.cpp  SetupDirectConnectionDialog.h  SetupDirectConnectionDialog.ui  SyncBoxConnectionSetupDialog.cpp  SyncBoxConnectionSetupDialog.h  SyncBoxConnectionSetupDialog.ui  UserMangerDialog.cpp  UserMangerDialog.h  UserMangerDialog.ui
View/Page/: ExamPage.cpp  ExamPage.h  ExamPage.ui  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  OutputPage.cpp  OutputPage.h  OutputPage.ui  SystemSettingPage.cpp  SystemSettingPage.h  SystemSettingPage.ui  ViewPage.cpp  ViewPage.h  ViewPage.ui  WorklistPage.cpp  WorklistPage.h  WorklistPage.ui
View/Widget/: AecControlWidget.cpp  AecControlWidget.h  AecControlWidget.ui  BodySizeWidget.cpp  (+96 more)
Worklist/: CMakeLists.txt  readme.txt
(+152 files in other folders)
